# ipyradiant

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  anaconda-project-lock.yml  anaconda-project.yml  dodo.py  environment.yml  index.ipynb  jupyter_notebook_config.json  labextensions.txt  package.json  postBuild  setup.cfg  setup.py
.ci/: environment.yml  win.bat
.github/workflows/: ciV0.yml
Examples/sandbox/: ipyradiant.ipynb
_scripts/: nblint.py  preflight.py  project.py  utils.py
conda.recipe/: meta.yaml
design/: plugin.json
examples/: BasicStyleUpdateExample.ipynb  ConjunctiveGraphViewer.ipynb  Cytoscape_Example.ipynb  Cytoscape_Viewer.ipynb  Datashader_Example.ipynb  ExampleNodeStyling.ipynb  ExampleWidgetCollapsing.ipynb  FederatedQuery_Example.ipynb  FileManager.ipynb  GraphExploreNodeSelection.ipynb  GraphExploreSelectMultiple.ipynb  GraphExplorer.ipynb  Improved_Vis.ipynb  InteractiveViewer.ipynb  JSONWidget_Example.ipynb  JSON_Interactive_Example.ipynb  LiteralObjects_Example.ipynb  LiteralObjects_Example_comments.ipynb  MultiPanelSelectWidget.ipynb  QueryWidget.ipynb  RDF_to_LPG_Example.ipynb  RDF_to_NX.ipynb  RDF_to_NX_Custom.ipynb  RemoteQuery_Example.ipynb  SPARQL_Metaclass_Queries.ipynb  Selection_Widget.ipynb  Tab App Example.ipynb  Tab_App_Example.ipynb  Test Tab App.ipynb  Test_Cytoscape.ipynb  Test_CytoscapeViewer.ipynb  Test_Datashader.ipynb  Test_GraphExploreNodeSelection.ipynb  Test_GraphExploreSelect.ipynb  Test_GraphExplorer.ipynb  Test_InteractiveViewer.ipynb  Test_LiteralObjects.ipynb  Test_MultiPanelSelect_Widget.ipynb  Test_QueryWidget.ipynb  Test_Selection_Widget.ipynb  (+12 more)
examples/data/: README.md  starwars.ttl  tree.jsonld
examples/old_examples/: RDF_to_LPG_Example.ipynb
examples/sandbox/: datashader.ipynb  datashader_experimenting.ipynb  datashader_test.ipynb  improved_datashader.ipynb  jupyter_widgets.ipynb  selection_widget.ipynb
examples/tests/: __init__.py  test_CustomURI.py  test_PredCollapsing.py  test_queries.py  test_servicepatch_rdflib.py
ipyradiant/: __init__.py
ipyradiant/ipyradiant/: __init__.py
scripts/: nblint.py
src/ipyradiant/: __init__.py  (+2 more)
(+82 files in other folders)
