[metadata]
name = ipyradiant
description = Jupyter Widgets for working with RDF graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jupyrdf/ipyradiant
author = ipyradiant Contributors
author_email = welz.zachary@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
    RDF
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python


[options]
python_requires = >=3.6
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    ipycytoscape
    ipywidgets
    pandas
    qgrid
    rdflib

[options.packages.find]
where =
    src

[flake8]
max-line-length = 88
ignore = E203, E501, W503
