[metadata]
name = ipyradiant
description = Jupyter Widgets for working with RDF graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jupyrdf/ipyradiant
author = ipyradiant Contributors
author_email = welz.zachary@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
    RDF
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python


[options]
python_requires = >=3.6
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    bokeh
    datashader
    holoviews
    ipycytoscape >=1.2
    ipywidgets >=7.6,<8
    networkx >=2
    pandas
    rdflib
    rdflib-jsonld
    scikit-image

[options.packages.find]
where =
    src

[options.extras_require]
# a known-good jupyterlab 3 combination
lab3 =
    jupyterlab ==3.*
    ipycytoscape >=1.2.0
    pyviz_comms >=1.0.3


[flake8]
max-line-length = 88
ignore = E203, E501, W503

[isort]
profile = black
multi_line_output = 3

